geocoding and deduplication updates

--- a/5-Geocoding/2-oda-download.ipynb
+++ b/5-Geocoding/2-oda-download.ipynb
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-29T19:24:09.230806Z",
-     "iopub.status.busy": "2022-08-29T19:24:09.230000Z",
-     "iopub.status.idle": "2022-08-29T19:24:09.652227Z",
-     "shell.execute_reply": "2022-08-29T19:24:09.651379Z",
-     "shell.execute_reply.started": "2022-08-29T19:24:09.230772Z"
+     "iopub.execute_input": "2022-09-08T19:15:40.404441Z",
+     "iopub.status.busy": "2022-09-08T19:15:40.403858Z",
+     "iopub.status.idle": "2022-09-08T19:15:40.844442Z",
+     "shell.execute_reply": "2022-09-08T19:15:40.843647Z",
+     "shell.execute_reply.started": "2022-09-08T19:15:40.404344Z"
     },
     "tags": []
    },
@@ -109,88 +109,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-29T19:24:11.934269Z",
-     "iopub.status.busy": "2022-08-29T19:24:11.933641Z",
-     "iopub.status.idle": "2022-08-29T19:24:16.483350Z",
-     "shell.execute_reply": "2022-08-29T19:24:16.482511Z",
-     "shell.execute_reply.started": "2022-08-29T19:24:11.934232Z"
+     "iopub.execute_input": "2022-09-08T19:15:47.270276Z",
+     "iopub.status.busy": "2022-09-08T19:15:47.269653Z"
     },
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_27199/3510776553.py:3: DtypeWarning: Columns (5,7,8,9,10,12,15,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('data/oda-addresses/ODA_QC_v1.csv')\n"
+      "AB\n"
      ]
     }
    ],
    "source": [
-    "# apply formatting to quebec\n",
+    "# apply formatting to quebec\\\n",
+    "# CHANGED apply formatting script to all provinces\n",
     "\n",
-    "df = pd.read_csv('data/oda-addresses/ODA_QC_v1.csv')"
+    "\n",
+    "provinces = ['AB', 'BC', 'MB', 'NB', 'NT', 'NS', 'ON', 'PE', 'QC', 'SK']\n",
+    "\n",
+    "\n",
+    "for province_code in provinces:\n",
+    "    print(province_code)\n",
+    "    ocd_file = \"data/oda-addresses/ODA_\" + province_code + \"_v1.csv\"\n",
+    "    df = pd.read_csv(ocd_file, low_memory=False)\n",
+    "    if (province_code == 'QC'):\n",
+    "        df = AddressClean_fr(df,'street','street')\n",
+    "    else:\n",
+    "        df = AddressClean_en(df,'street','street')\n",
+    "    output_file_name = \"data/oda-addresses/ODA_\" + province_code + \"_v1_formatted.csv\"\n",
+    "    df.to_csv(output_file_name, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-29T19:27:27.186016Z",
-     "iopub.status.busy": "2022-08-29T19:27:27.185516Z",
-     "iopub.status.idle": "2022-08-29T19:27:27.193009Z",
-     "shell.execute_reply": "2022-08-29T19:27:27.192284Z",
-     "shell.execute_reply.started": "2022-08-29T19:27:27.185983Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1254207                     av nault\n",
-       "1254208                 av lariviere\n",
-       "1254209           boul temiscamingue\n",
-       "1254210                av de capella\n",
-       "1254211                rang ducharme\n",
-       "1254212               ch de la croix\n",
-       "1254213            av des bois-jolis\n",
-       "1254214                   ch charron\n",
-       "1254215                 rue lavallee\n",
-       "1254216              rue iberville o\n",
-       "1254217              rue iberville o\n",
-       "1254218              rue iberville o\n",
-       "1254219                    av quebec\n",
-       "1254220                    av quebec\n",
-       "1254221         ch du lac-labyrinthe\n",
-       "1254222              rang des cypres\n",
-       "1254223                   ch plourde\n",
-       "1254224           boul temiscamingue\n",
-       "1254225           boul temiscamingue\n",
-       "1254226             rue taschereau e\n",
-       "1254227         av sainte-bernadette\n",
-       "1254228                 av pelissier\n",
-       "1254229                     av nault\n",
-       "1254230                     av nault\n",
-       "1254231                     av nault\n",
-       "1254232              rue de cadillac\n",
-       "1254233    rue monseigneur-tessier o\n",
-       "1254234                rue pronovost\n",
-       "1254235                  rue leblanc\n",
-       "1254236                  rue leblanc\n",
-       "Name: street, dtype: object"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list(df)\n",
     "# df = df.sample(30)\n",
