--- a/5-Geocoding/4-address-match.ipynb
+++ b/5-Geocoding/4-address-match.ipynb
@@ -172,11 +172,12 @@
     "    #read in openadress file\n",
     "    # DF=pd.read_csv(input_dir+addresses)\n",
     "    \n",
+    "    ocd_file = \"data/oda-addresses/ODA_\" + province_code + \"_v1_formatted.csv\"\n",
     "    \n",
-    "    if (province_code == 'QC'):\n",
-    "        ocd_file = \"data/oda-addresses/ODA_\" + province_code + \"_v1_formatted.csv\"\n",
-    "    else:\n",
-    "        ocd_file = \"data/oda-addresses/ODA_\" + province_code + \"_v1.csv\"\n",
+    "#     if (province_code == 'QC'):\n",
+    "#         ocd_file = \"data/oda-addresses/ODA_\" + province_code + \"_v1_formatted.csv\"\n",
+    "#     else:\n",
+    "#         ocd_file = \"data/oda-addresses/ODA_\" + province_code + \"_v1.csv\"\n",
     "\n",
     "    DF=pd.read_csv(ocd_file, low_memory=False)\n",
     "    #drop any entries without a street number\n",
