--- a/5-Geocoding/5-results.ipynb
+++ b/5-Geocoding/5-results.ipynb
@@ -28,15 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-06T17:16:46.092171Z",
-     "iopub.status.busy": "2022-09-06T17:16:46.091908Z",
-     "iopub.status.idle": "2022-09-06T17:16:46.727656Z",
-     "shell.execute_reply": "2022-09-06T17:16:46.726880Z",
-     "shell.execute_reply.started": "2022-09-06T17:16:46.092142Z"
-    }
+     "iopub.execute_input": "2022-09-12T14:50:54.434070Z",
+     "iopub.status.busy": "2022-09-12T14:50:54.433828Z",
+     "iopub.status.idle": "2022-09-12T14:50:55.029801Z",
+     "shell.execute_reply": "2022-09-12T14:50:55.028997Z",
+     "shell.execute_reply.started": "2022-09-12T14:50:54.433995Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -45,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-06T18:29:31.074568Z",
-     "iopub.status.busy": "2022-09-06T18:29:31.074287Z",
-     "iopub.status.idle": "2022-09-06T18:29:43.047044Z",
-     "shell.execute_reply": "2022-09-06T18:29:43.046145Z",
-     "shell.execute_reply.started": "2022-09-06T18:29:31.074538Z"
+     "iopub.execute_input": "2022-09-12T14:50:55.030981Z",
+     "iopub.status.busy": "2022-09-12T14:50:55.030799Z",
+     "iopub.status.idle": "2022-09-12T14:51:05.142999Z",
+     "shell.execute_reply": "2022-09-12T14:51:05.142224Z",
+     "shell.execute_reply.started": "2022-09-12T14:50:55.030957Z"
     },
     "tags": []
    },
@@ -63,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-06T17:40:02.271332Z",
-     "iopub.status.busy": "2022-09-06T17:40:02.271042Z",
-     "iopub.status.idle": "2022-09-06T17:40:02.277508Z",
-     "shell.execute_reply": "2022-09-06T17:40:02.276445Z",
-     "shell.execute_reply.started": "2022-09-06T17:40:02.271299Z"
+     "iopub.execute_input": "2022-09-12T14:51:05.147138Z",
+     "iopub.status.busy": "2022-09-12T14:51:05.146957Z",
+     "iopub.status.idle": "2022-09-12T14:51:05.157006Z",
+     "shell.execute_reply": "2022-09-12T14:51:05.156107Z",
+     "shell.execute_reply.started": "2022-09-12T14:51:05.147114Z"
     },
     "tags": []
    },
@@ -81,7 +82,7 @@
        "694519"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-06T17:35:37.373429Z",
-     "iopub.status.busy": "2022-09-06T17:35:37.373143Z",
-     "iopub.status.idle": "2022-09-06T17:35:37.423118Z",
-     "shell.execute_reply": "2022-09-06T17:35:37.422240Z",
-     "shell.execute_reply.started": "2022-09-06T17:35:37.373397Z"
+     "iopub.execute_input": "2022-09-12T14:51:05.158265Z",
+     "iopub.status.busy": "2022-09-12T14:51:05.158083Z",
+     "iopub.status.idle": "2022-09-12T14:51:05.225096Z",
+     "shell.execute_reply": "2022-09-12T14:51:05.224271Z",
+     "shell.execute_reply.started": "2022-09-12T14:51:05.158242Z"
     },
     "tags": []
    },
@@ -108,10 +109,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matches above 80%: 61%\n",
-      "Matches above 85%: 55%\n",
-      "Matches above 90%: 51%\n",
-      "Matches above 95%: 48%\n",
+      "Matches above 80%: 65%\n",
+      "Matches above 85%: 60%\n",
+      "Matches above 90%: 56%\n",
+      "Matches above 95%: 53%\n",
       "Matches above 99.5%: 47%\n"
      ]
     }
@@ -136,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-06T18:35:24.337982Z",
-     "iopub.status.busy": "2022-09-06T18:35:24.337593Z",
-     "iopub.status.idle": "2022-09-06T18:35:24.808230Z",
-     "shell.execute_reply": "2022-09-06T18:35:24.807219Z",
-     "shell.execute_reply.started": "2022-09-06T18:35:24.337936Z"
+     "iopub.execute_input": "2022-09-12T14:51:05.226380Z",
+     "iopub.status.busy": "2022-09-12T14:51:05.226182Z",
+     "iopub.status.idle": "2022-09-12T14:51:05.670076Z",
+     "shell.execute_reply": "2022-09-12T14:51:05.669308Z",
+     "shell.execute_reply.started": "2022-09-12T14:51:05.226355Z"
     },
     "tags": []
    },
@@ -153,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "original number to geocode: 490387\n",
-      "number to geocode after matching: 242932\n"
+      "number to geocode after matching: 232724\n"
      ]
     }
    ],
@@ -168,14 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-06T18:38:57.497742Z",
-     "iopub.status.busy": "2022-09-06T18:38:57.497468Z",
-     "iopub.status.idle": "2022-09-06T18:38:58.442370Z",
-     "shell.execute_reply": "2022-09-06T18:38:58.441571Z",
-     "shell.execute_reply.started": "2022-09-06T18:38:57.497712Z"
+     "iopub.execute_input": "2022-09-12T14:51:05.671582Z",
+     "iopub.status.busy": "2022-09-12T14:51:05.671342Z"
     },
     "tags": []
    },
@@ -186,11 +184,11 @@
      "text": [
       "AB:\n",
       "   rows: 62804\n",
-      "   perfect matches: 41%\n",
-      "   matches above 0.8: 75%\n",
+      "   perfect matches: 81%\n",
+      "   matches above 0.8: 88%\n",
       "BC:\n",
       "   rows: 173035\n",
-      "   perfect matches: 56%\n",
+      "   perfect matches: 60%\n",
       "   matches above 0.8: 67%\n",
       "MB:\n",
       "   rows: 145\n",
@@ -198,32 +196,16 @@
       "   matches above 0.8: 66%\n",
       "NB:\n",
       "   rows: 151\n",
-      "   perfect matches: 64%\n",
-      "   matches above 0.8: 83%\n",
+      "   perfect matches: 81%\n",
+      "   matches above 0.8: 89%\n",
       "NT:\n",
       "   rows: 1410\n",
       "   perfect matches: 89%\n",
       "   matches above 0.8: 92%\n",
       "NS:\n",
       "   rows: 36\n",
-      "   perfect matches: 72%\n",
-      "   matches above 0.8: 94%\n",
-      "ON:\n",
-      "   rows: 215228\n",
-      "   perfect matches: 55%\n",
-      "   matches above 0.8: 68%\n",
-      "PE:\n",
-      "   rows: 5\n",
-      "   perfect matches: 60%\n",
-      "   matches above 0.8: 80%\n",
-      "QC:\n",
-      "   rows: 241591\n",
-      "   perfect matches: 35%\n",
-      "   matches above 0.8: 48%\n",
-      "SK:\n",
-      "   rows: 114\n",
-      "   perfect matches: 20%\n",
-      "   matches above 0.8: 38%\n"
+      "   perfect matches: 75%\n",
+      "   matches above 0.8: 94%\n"
      ]
     }
    ],
