--- a/7-Deduplication/3_scratch_duplicates_PC.ipynb
+++ b/7-Deduplication/3_scratch_duplicates_PC.ipynb
@@ -22,25 +22,26 @@
     "final = pd.read_csv(\"inputs/assigned_CSDs.csv\", low_memory=False)\n",
     "\n",
     "#read dedupe file\n",
-    "df = pd.read_csv(\"outputs/probable_duplicates_PC.csv\")\n",
+    "#df = pd.read_csv(\"outputs/probable_duplicates_PC.csv\")\n",
+    "df = pd.read_csv(\"outputs/pairs_PC.csv\")\n",
+    "\n",
     "\n",
     "def hierarchy(id1, id2): \n",
     "    \n",
     "    try:\n",
     "\n",
-    "        check_beds1 = final.loc[final.idx == id1].number_beds.item()\n",
-    "        check_beds2 = final.loc[final.idx == id2].number_beds.item()\n",
-    "        check_type1 = final.loc[final.idx == id1].facility_type.item()\n",
-    "        check_type2 = final.loc[final.idx == id2].facility_type.item()\n",
-    "        check_file1 = final.loc[final.idx == id1].filename.item()\n",
-    "        check_file2 = final.loc[final.idx == id2].filename.item()\n",
-    "        check_name1 = final.loc[final.idx == id1].facility_name.item()\n",
-    "        check_name2 = final.loc[final.idx == id2].facility_name.item()\n",
+    "        \n",
+    "        check_NAICS1 = final.loc[final.idx == id1].NAICS_Group.item()\n",
+    "        check_NAICS2 = final.loc[final.idx == id2].NAICS_Group.item()\n",
+    "        check_file1 = final.loc[final.idx == id1].localfile.item()\n",
+    "        check_file2 = final.loc[final.idx == id2].localfile.item()\n",
+    "        check_name1 = final.loc[final.idx == id1].business_name.item()\n",
+    "        check_name2 = final.loc[final.idx == id2].business_name.item()\n",
     "        check_addr1 = final.loc[final.idx == id1].street_name.item()\n",
     "        check_addr2 = final.loc[final.idx == id2].street_name.item()\n",
     "\n",
-    "        filename_priority = ['QC_healthcare_facilities.csv', 'QC_Gatineau_public_places_including_hospitals,csv', 'QC_Quebec_City_public_places.csv', \n",
-    "                             'ON_Ottawa_hospital.csv', 'ON_Durham_healthcare_facilities.csv', 'ON_healthcare_facilities.csv', 'NB_hospital_horizon.csv', 'NB_nursing_homes.csv']\n",
+    "        #filename_priority = ['QC_healthcare_facilities.csv', 'QC_Gatineau_public_places_including_hospitals,csv', 'QC_Quebec_City_public_places.csv', \n",
+    "         #                    'ON_Ottawa_hospital.csv', 'ON_Durham_healthcare_facilities.csv', 'ON_healthcare_facilities.csv', 'NB_hospital_horizon.csv', 'NB_nursing_homes.csv']\n",
     "\n",
     "        facilityname_priority = ['hospital', 'hôpita','hopita']\n",
     "\n",
@@ -88,31 +89,7 @@
     "                    elif check_file2 == 'CIHI_healthcare_facilities.csv' and check_file1 != 'CIHI_healthcare_facilities.csv':\n",
     "                        return id2\n",
     "\n",
-    "                    else:\n",
-    "\n",
-    "                        if check_beds1 == np.nan and check_beds2 == np.nan:\n",
-    "\n",
-    "                            if any(substring in check_name1.lower() for substring in facilityname_priority):\n",
-    "                                return id2\n",
-    "                            elif any(substring in check_name2.lower() for substring in facilityname_priority):\n",
-    "                                return id1\n",
-    "                            else:\n",
-    "                                return id2\n",
-    "\n",
-    "                        elif check_beds1 == np.nan and check_beds2 != np.nan:\n",
-    "                            return id1\n",
-    "\n",
-    "                        elif check_beds1 != np.nan and check_beds2 == np.nan:\n",
-    "                            return id2\n",
-    "\n",
-    "                        elif check_beds1 != np.nan and check_beds2 != np.nan:\n",
-    "\n",
-    "                            if any(substring in check_name1.lower() for substring in facilityname_priority):\n",
-    "                                return id2\n",
-    "                            elif any(substring in check_name2.lower() for substring in facilityname_priority):\n",
-    "                                return id1\n",
-    "                            else:\n",
-    "                                return id2\n",
+    "                \n",
     "\n",
     "\n",
     "\n",
@@ -126,23 +103,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-04T16:04:42.721553Z",
-     "iopub.status.busy": "2022-05-04T16:04:42.721342Z",
-     "iopub.status.idle": "2022-05-04T16:04:42.875564Z",
-     "shell.execute_reply": "2022-05-04T16:04:42.874408Z",
-     "shell.execute_reply.started": "2022-05-04T16:04:42.721502Z"
+     "iopub.execute_input": "2022-09-12T16:39:32.869462Z",
+     "iopub.status.busy": "2022-09-12T16:39:32.869127Z",
+     "iopub.status.idle": "2022-09-12T16:39:33.452035Z",
+     "shell.execute_reply": "2022-09-12T16:39:33.451202Z",
+     "shell.execute_reply.started": "2022-09-12T16:39:32.869383Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def check_1(address, distance, name, streetnumber, types):\n",
+    "\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "#read database file used in 7-Dedup.\n",
+    "final = pd.read_csv(\"inputs/1NAICS_Test.csv\", low_memory=False)\n",
+    "\n",
+    "#read dedupe file\n",
+    "#df = pd.read_csv(\"outputs/probable_duplicates_PC.csv\")\n",
+    "df = pd.read_csv(\"outputs/pairs_PC.csv\")\n",
+    "\n",
+    "def check_1(address, distance, name, streetnumber):\n",
     "\n",
     "    if distance != None:\n",
-    "        if address >= 0.75 and distance < 2 and name > 0.7 and streetnumber == 1 and types == 1:\n",
+    "        if address >= 0.75 and distance < 2 and name > 0.7 and streetnumber == 1:\n",
     "            return True\n",
     "        else:\n",
     "            return False\n",
@@ -153,31 +143,30 @@
     "df[\"Check_1\"] = df.apply(lambda x: check_1(address = x.Addr_CS, \n",
     "                          distance = x.Distance,\n",
     "                          name = x.Name_CS,\n",
-    "                          streetnumber = x.StrNum_Match,\n",
-    "                          types = x.Type_Match), axis=1)\n",
+    "                          streetnumber = x.StrNum_Match), axis=1)\n",
     "\n",
-    "#df.to_csv('test.csv')"
+    "df.to_csv('test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-04T16:04:42.877062Z",
-     "iopub.status.busy": "2022-05-04T16:04:42.876877Z",
-     "iopub.status.idle": "2022-05-04T16:04:43.004537Z",
-     "shell.execute_reply": "2022-05-04T16:04:43.003898Z",
-     "shell.execute_reply.started": "2022-05-04T16:04:42.877039Z"
+     "iopub.execute_input": "2022-09-12T16:39:36.152916Z",
+     "iopub.status.busy": "2022-09-12T16:39:36.152585Z",
+     "iopub.status.idle": "2022-09-12T16:39:36.161014Z",
+     "shell.execute_reply": "2022-09-12T16:39:36.159973Z",
+     "shell.execute_reply.started": "2022-09-12T16:39:36.152880Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def check_2(address, distance, name, types):\n",
+    "def check_2(address, distance, name):\n",
     "\n",
     "    if distance != None:\n",
-    "        if address >= 0.75 and distance < 1 and name > 0.85 and types == 1:\n",
+    "        if address >= 0.75 and distance < 1 and name > 0.85:\n",
     "            return True\n",
     "        else:\n",
     "            return False\n",
@@ -187,29 +176,28 @@
     "\n",
     "df[\"Check_2\"] = df.apply(lambda x: check_2(address = x.Addr_CS, \n",
     "                          distance = x.Distance,\n",
-    "                          name = x.Name_CS,\n",
-    "                          types = x.Type_Match), axis=1)\n"
+    "                          name = x.Name_CS), axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-04T16:04:43.005857Z",
-     "iopub.status.busy": "2022-05-04T16:04:43.005671Z",
-     "iopub.status.idle": "2022-05-04T16:04:43.133283Z",
-     "shell.execute_reply": "2022-05-04T16:04:43.132614Z",
-     "shell.execute_reply.started": "2022-05-04T16:04:43.005835Z"
+     "iopub.execute_input": "2022-09-12T16:39:38.784995Z",
+     "iopub.status.busy": "2022-09-12T16:39:38.784586Z",
+     "iopub.status.idle": "2022-09-12T16:39:38.793580Z",
+     "shell.execute_reply": "2022-09-12T16:39:38.792738Z",
+     "shell.execute_reply.started": "2022-09-12T16:39:38.784962Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def check_3(address, distance, file, types):\n",
+    "def check_3(address, distance, file):\n",
     "\n",
     "    if distance != None:\n",
-    "        if address >= 0.99 and distance <= 0.5 and file == 1 and types == 1:\n",
+    "        if address >= 0.99 and distance <= 0.5 and file == 1:\n",
     "            return True\n",
     "        else:\n",
     "            return False\n",
@@ -219,29 +207,28 @@
     "\n",
     "df[\"Check_3\"] = df.apply(lambda x: check_3(address = x.Addr_CS, \n",
     "                          distance = x.Distance,\n",
-    "                          file = x.File_Match,\n",
-    "                          types = x.Type_Match), axis=1)"
+    "                          file = x.File_Match), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-04T16:04:43.134367Z",
-     "iopub.status.busy": "2022-05-04T16:04:43.134190Z",
-     "iopub.status.idle": "2022-05-04T16:04:43.266933Z",
-     "shell.execute_reply": "2022-05-04T16:04:43.266259Z",
-     "shell.execute_reply.started": "2022-05-04T16:04:43.134345Z"
+     "iopub.execute_input": "2022-09-12T16:39:42.233566Z",
+     "iopub.status.busy": "2022-09-12T16:39:42.233304Z",
+     "iopub.status.idle": "2022-09-12T16:39:42.242387Z",
+     "shell.execute_reply": "2022-09-12T16:39:42.241525Z",
+     "shell.execute_reply.started": "2022-09-12T16:39:42.233538Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def check_4(address, distance, streetnumber, types):\n",
+    "def check_4(address, distance, streetnumber):\n",
     "\n",
     "    if distance != None:\n",
-    "        if address >= 0.8 and distance < 0.1 and streetnumber == 1 and types == 1:\n",
+    "        if address >= 0.8 and distance < 0.1 and streetnumber == 1:\n",
     "            return True\n",
     "        else:\n",
     "            return False\n",
@@ -251,20 +238,19 @@
     "\n",
     "df[\"Check_4\"] = df.apply(lambda x: check_4(address = x.Addr_CS, \n",
     "                          distance = x.Distance, \n",
-    "                          streetnumber = x.StrNum_Match,\n",
-    "                          types = x.Type_Match), axis=1)"
+    "                          streetnumber = x.StrNum_Match), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-04T16:04:43.267983Z",
-     "iopub.status.busy": "2022-05-04T16:04:43.267801Z",
-     "iopub.status.idle": "2022-05-04T16:04:43.397410Z",
-     "shell.execute_reply": "2022-05-04T16:04:43.396675Z",
-     "shell.execute_reply.started": "2022-05-04T16:04:43.267961Z"
+     "iopub.execute_input": "2022-09-12T16:39:45.128745Z",
+     "iopub.status.busy": "2022-09-12T16:39:45.128428Z",
+     "iopub.status.idle": "2022-09-12T16:39:45.137148Z",
+     "shell.execute_reply": "2022-09-12T16:39:45.136412Z",
+     "shell.execute_reply.started": "2022-09-12T16:39:45.128710Z"
     },
     "tags": []
    },
@@ -289,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-04T16:04:43.398638Z",
-     "iopub.status.busy": "2022-05-04T16:04:43.398451Z",
-     "iopub.status.idle": "2022-05-04T16:04:44.104232Z",
-     "shell.execute_reply": "2022-05-04T16:04:44.103582Z",
-     "shell.execute_reply.started": "2022-05-04T16:04:43.398614Z"
+     "iopub.execute_input": "2022-09-12T16:39:48.983840Z",
+     "iopub.status.busy": "2022-09-12T16:39:48.983540Z",
+     "iopub.status.idle": "2022-09-12T16:39:49.049115Z",
+     "shell.execute_reply": "2022-09-12T16:39:49.048263Z",
+     "shell.execute_reply.started": "2022-09-12T16:39:48.983808Z"
     },
     "tags": []
    },
@@ -314,7 +300,7 @@
     "df_true.to_csv('outputs/duplicates_PC.csv', index=False)\n",
     "df_false.to_csv('outputs/NOT_duplicates_PC.csv', index=False)\n",
     "\n",
-    "hashes = df_true['to_remove'].tolist()\n",
+    "hashes = df_true #['to_remove'].tolist()\n",
     "\n",
     "final = final[~final['idx'].isin(hashes)]\n",
     "final.to_csv('deduplicated_PC.csv', index=False)\n",
